--- a/ui/components/multichain/multichain-components.scss
+++ b/ui/components/multichain/multichain-components.scss
@@ -13,3 +13,4 @@
 @import 'multichain-token-list-item/multichain-token-list-item';
 @import 'network-list-item/';
 @import 'network-list-menu/';
+@import 'product-tour-popover/product-tour-popover';
